maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: ')' expected but 'else' found.
	else{ for(c <- 0 to getMondeHauteur() - 1){
        ^JediEscaper:31: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:32: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:33: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:34: error: Unmatched closing brace '}' ignored here
}
^